# py-ns

./: .env  .gitignore  LICENSE  pyproject.toml
api-definitions/: disruptions-api.json  nsapp-stations-api.json  reisinformatie-api.json
py_ns/: __init__.py  client.py  exceptions.py  station_codes.py
py_ns/_base/: transport.py
py_ns/api/: disruptions.py  stations.py  travel.py
py_ns/models/: disruptions.py  stations.py  travel.py
scripts/: generate_models.sh  generate_station_codes.py
tests/: conftest.py  test_disruptions.py  test_stations.py  test_transport.py  test_travel.py
