[project]
name = "py-ns"
version = "0.1.0"
description = "Python client for the NS (Dutch Railways) API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=8.0",
    "pytest-httpx>=0.35",
]
